fix slider in header => add new img to slider, add z-index

--- a/css/main.css
+++ b/css/main.css
@@ -48,13 +48,17 @@ header::before {
   position: relative;
 }
 
+.iphone__img {
+  z-index: 2;
+}
+
 .iphone__slider {
   position: absolute;
-  top: 15%;
+  top: 10%;
   left: 20%;
-  width: 34%;
-  height: 49%;
-  background-color: red;
+  width: 40%;
+  height: 80%;
+  z-index: 1;
 }
 
 /* set icons' propert */
